<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search_white"
        android:title="Search"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_favorite"
        android:icon="@drawable/ic_favorite_white"
        android:title="Favorite"
        app:showAsAction="always" />


</menu>